fix(update-checks): do not force show scrollbar in release notes info

--- a/client/src/plugins/update-checks/NewVersionInfoView.less
+++ b/client/src/plugins/update-checks/NewVersionInfoView.less
@@ -34,7 +34,7 @@
 
   .htmlSnippet {
     height: 200px;
-    overflow-y: scroll;
+    overflow-y: auto;
     border: 1px solid gray;
     margin-top: 10px;
     padding: 20px;
